--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 
 <body>
     <div id="root">
-
+        <div class="container vh-100">
+            <div class="row h-100 justify-content-center align-items-center">
+                <div class="col-3 text-center">
+                    <i @click="decreaseIndex" class="fas fa-chevron-left fa-4x"></i>
+                </div>
+                <div class="col-6">
+                    <img v-for="(image, index) in images" :src="image" :class="isActive(index)" class="img-fluid" alt="">
+                </div>
+                <div class="col-3 text-center">
+                    <i @click="increaseIndex" class="fas fa-chevron-right fa-4x"></i>
+                </div>
+            </div>
+        </div>
 
 
 
