--- a/index.html
+++ b/index.html
@@ -15,16 +15,24 @@
 
 <body>
     <div id="root">
-        <div class="container vh-100">
-            <div class="row h-100 justify-content-center align-items-center">
-                <div class="col-3 text-center">
-                    <i @click="decreaseIndex" class="fas fa-chevron-left fa-4x"></i>
+        <div class="container vh-100 ">
+            <div class="row pt-5 justify-content-center align-items-center">
+                <div class="col-1 text-center">
+                    <i @click="decreaseIndex" class="fas fa-chevron-left fa-2x"></i>
                 </div>
-                <div class="col-6">
-                    <img v-for="(image, index) in images" :src="image" :class="isActive(index)" class="img-fluid" alt="">
+                <div class="col-10 img-container">
+                    <img v-for="(image, index) in images" :src="image" :class="isActive(index)" alt=" ">
                 </div>
-                <div class="col-3 text-center">
-                    <i @click="increaseIndex" class="fas fa-chevron-right fa-4x"></i>
+                <div class="col-1 text-center ">
+                    <i @click="increaseIndex " class="fas fa-chevron-right fa-2x "></i>
+                </div>
+            </div>
+            <div class="row justify-content-center pt-5 ">
+                <div class="dots col-12 d-flex justify-content-evenly align-items-center ">
+                    <div class="dot "></div>
+                    <div class="dot "></div>
+                    <div class="dot "></div>
+                    <div class="dot "></div>
                 </div>
             </div>
         </div>
@@ -33,7 +41,7 @@
 
 
     </div>
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js "></script>
 </body>
 
 </html>
